cambio color header

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #a30000;
+    background-color: #5ad0ff;
     color: #fff;
     text-align: center;
     padding: 20px;
